# newsguru

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  main.py  manifest.json  pyproject.toml
agents/: topic_modeler.py
components/: article_card.py  chat_ui.py  cluster_card.py  feed_panel.py  journalist_panel.py  layout.py  topic_cards.py  trending.py
db/: migrate.py  pool.py
docs/: test_coverage.md
prompts/: scoring_rules.md
services/: chat_service.py  daily_enrichment.py  feed_scheduler.py  journalist_service.py  rss_service.py  scraper_service.py  search_service.py  sentiment_service.py  significance_service.py  topic_service.py  translate_service.py  treemap_service.py
sql/: schema.sql
tests/: capture_video.py  regression_suite.py  remote_tests.py  test_suite.py  test_treemap.py
utils/: auth.py  config.py  i18n.py  rate_limit.py
